Change listen interfaces from `any` to `boltzmann` and `shannon`

--- a/entropy.conf
+++ b/entropy.conf
@@ -5,8 +5,8 @@ pmacctd_as: file
 pmacctd_net: file
 pre_tag_map: /etc/pmacct/entropy.pretag.map
 aggregate: tag,src_host,dst_host,src_net,dst_net
-pcap_interface: any
-pcap_filter: src net 2001:470:4c22:ae86:babe::/80 or dst net 2001:470:4c22:ae86:babe::/80
+pcap_interfaces_map: /etc/pmacct/entropy.interfaces.map
+pcap_interface_wait: true
 !
 sql_host: [redacted]
 !
