Add daemonize/startup related scripts and doc

--- a/entropy.conf
+++ b/entropy.conf
@@ -1,22 +1,22 @@
 daemonize: true
-plugins: mysql
-networks_file: /etc/pmacct/entropy.networks.lst
-pmacctd_as: file
-pmacctd_net: file
-pre_tag_map: /etc/pmacct/entropy.pretag.map
-aggregate: tag,src_host,dst_host,src_net,dst_net
-pcap_interfaces_map: /etc/pmacct/entropy.interfaces.map
-pcap_interface_wait: true
+plugins: mysql[entropy]
+networks_file[entropy]: /etc/pmacct/entropy.networks.lst
+pmacctd_as[entropy]: file
+pmacctd_net[entropy]: file
+pre_tag_map[entropy]: /etc/pmacct/entropy.pretag.map
+aggregate[entropy]: tag,src_host,dst_host,src_net,dst_net
+pcap_interfaces_map[entropy]: /etc/pmacct/entropy.interfaces.map
+pcap_interface_wait[entropy]: true
 !
-sql_host: [redacted]
+sql_host[entropy]: [redacted]
 !
-sql_db: pmacct
-sql_table: acct
-sql_table_version: 1
-sql_optimize_clauses: true
-sql_passwd: [redacted]
-sql_user: [redacted]
+sql_db[entropy]: pmacct
+sql_table[entropy]: acct
+sql_table_version[entropy]: 1
+sql_optimize_clauses[entropy]: true
+sql_passwd[entropy]: [redacted]
+sql_user[entropy]: [redacted]
 !
-sql_refresh_time: 300
-sql_history: 5m
-sql_history_roundoff: mh
+sql_refresh_time[entropy]: 300
+sql_history[entropy]: 5m
+sql_history_roundoff[entropy]: mh
