Rollback: interface map has not been tested, roll back to listen `any`

--- a/entropy.conf
+++ b/entropy.conf
@@ -5,8 +5,8 @@ pmacctd_as[entropy]: file
 pmacctd_net[entropy]: file
 pre_tag_map[entropy]: /etc/pmacct/entropy.pretag.map
 aggregate[entropy]: tag,src_host,dst_host,src_net,dst_net
-pcap_interfaces_map[entropy]: /etc/pmacct/entropy.interfaces.map
-pcap_interface_wait[entropy]: true
+pcap_interface: any
+pcap_filter: src net 2001:470:4c22:ae86:babe::/80 or dst net 2001:470:4c22:ae86:babe::/80
 !
 sql_host[entropy]: [redacted]
 !
