--- a/entropy.conf
+++ b/entropy.conf
@@ -6,7 +6,7 @@ pmacctd_net[entropy]: file
 pre_tag_map[entropy]: /etc/pmacct/entropy.pretag.map
 aggregate[entropy]: tag,src_host,dst_host,src_net,dst_net
 pcap_interface: any
-pcap_filter: src net 2001:470:4c22:ae86:babe::/80 or dst net 2001:470:4c22:ae86:babe::/80
+pcap_filter: src net 2001:470:4c22:ae86:babe::/80 or dst net 2001:470:4c22:ae86:babe::/80 or src net 2a0c:b641:69c::/48 or dst net 2a0c:b641:69c::/48
 !
 sql_host[entropy]: [redacted]
 !
